jvimalprasathdev/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Centralized Campaigns</fullName>
        <description>Centralized Campaigns</description>
        <isActive>true</isActive>
        <values>
            <fullName>Attempt 1 - No Contact</fullName>
        </values>
        <values>
            <fullName>Attempt 2 - No Contact</fullName>
        </values>
        <values>
            <fullName>Attempt 3 - No Contact</fullName>
        </values>
        <values>
            <fullName>Attempt 4 - No Contact</fullName>
        </values>
        <values>
            <fullName>Attempt 5 - No Contact</fullName>
        </values>
        <values>
            <fullName>Attempt 6%2B - No Contact</fullName>
        </values>
        <values>
            <fullName>Bogus Lead</fullName>
        </values>
        <values>
            <fullName>Contacted %2F Customer Rate Shopping</fullName>
        </values>
        <values>
            <fullName>Contacted %2F Follow Up Pending</fullName>
        </values>
        <values>
            <fullName>Contacted %2F No Product Available</fullName>
        </values>
        <values>
            <fullName>Contacted %2F No longer interested</fullName>
        </values>
        <values>
            <fullName>Contacted %2F Property Type Not Offered</fullName>
        </values>
        <values>
            <fullName>Contacted %2F Still Deciding</fullName>
        </values>
        <values>
            <fullName>Contacted %2F Went with another lender</fullName>
        </values>
        <values>
            <fullName>Duplicate Lead</fullName>
        </values>
        <values>
            <fullName>National Opt Out</fullName>
        </values>
        <values>
            <fullName>New - Not Opened</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>No Attempts</fullName>
        </values>
        <values>
            <fullName>Request For Prequal</fullName>
        </values>
        <values>
            <fullName>Test Lead</fullName>
        </values>
        <values>
            <fullName>Wrong number%2FeMarketing</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Home Equity Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>HE Application Taken</fullName>
        </values>
        <values>
            <fullName>HE Attempt 1 - No Contact</fullName>
        </values>
        <values>
            <fullName>HE Attempt 2 - No Contact</fullName>
        </values>
        <values>
            <fullName>HE Attempt 3 - No Contact</fullName>
        </values>
        <values>
            <fullName>HE Attempt 4 - No Contact</fullName>
        </values>
        <values>
            <fullName>HE Attempt 5 - No Contact</fullName>
        </values>
        <values>
            <fullName>HE Attempt 6%2B - No Contact</fullName>
        </values>
        <values>
            <fullName>HE Bogus Lead</fullName>
        </values>
        <values>
            <fullName>HE Closed%2FFunded</fullName>
        </values>
        <values>
            <fullName>HE Contacted %2F Follow Up Pending</fullName>
        </values>
        <values>
            <fullName>HE Contacted %2F No Product Available</fullName>
        </values>
        <values>
            <fullName>HE Contacted %2F No longer interested</fullName>
        </values>
        <values>
            <fullName>HE Contacted %2F Went with another lender</fullName>
        </values>
        <values>
            <fullName>HE Duplicate Lead</fullName>
        </values>
        <values>
            <fullName>HE National Opt Out</fullName>
        </values>
        <values>
            <fullName>HE New - Not Opened</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>HE Test Lead</fullName>
        </values>
        <values>
            <fullName>HE Wrong Number%2FeMarketing</fullName>
        </values>
        <values>
            <fullName>No Attempts</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Attempt 1 - No Contact</fullName>
        </values>
        <values>
            <fullName>Attempt 2 - No Contact</fullName>
        </values>
        <values>
            <fullName>Attempt 3 - No Contact</fullName>
        </values>
        <values>
            <fullName>Attempt 4 - No Contact</fullName>
        </values>
        <values>
            <fullName>Attempt 5 - No Contact</fullName>
        </values>
        <values>
            <fullName>Attempt 6%2B - No Contact</fullName>
        </values>
        <values>
            <fullName>Bogus Lead</fullName>
        </values>
        <values>
            <fullName>Contacted %2F Customer Rate Shopping</fullName>
        </values>
        <values>
            <fullName>Contacted %2F Follow Up Pending</fullName>
        </values>
        <values>
            <fullName>Contacted %2F No Product Available</fullName>
        </values>
        <values>
            <fullName>Contacted %2F No longer interested</fullName>
        </values>
        <values>
            <fullName>Contacted %2F Property Type Not Offered</fullName>
        </values>
        <values>
            <fullName>Contacted %2F Still Deciding</fullName>
        </values>
        <values>
            <fullName>Contacted %2F Went with another lender</fullName>
        </values>
        <values>
            <fullName>Duplicate Lead</fullName>
        </values>
        <values>
            <fullName>National Opt Out</fullName>
        </values>
        <values>
            <fullName>New - Not Opened</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>No Attempts</fullName>
        </values>
        <values>
            <fullName>Request For Prequal</fullName>
        </values>
        <values>
            <fullName>Test Lead</fullName>
        </values>
        <values>
            <fullName>Wrong number%2FeMarketing</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Timestamp__c</fullName>
        <description>Captures the timestamp when a lead changes from New to Active</description>
        <label>Active Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Admin_Comments__c</fullName>
        <description>The borrower message</description>
        <label>Admin Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Home_Owner_s_Association_Dues__c</fullName>
        <label>Annual Home Owner&apos;s Association Dues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Homeowner_s_Insurance__c</fullName>
        <label>Annual Homeowner&apos;s Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Real_Estate_Taxes__c</fullName>
        <label>Annual Real Estate Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant_Type_Code__c</fullName>
        <label>Applicant Type Code</label>
        <picklist>
            <controllingField>Applicant_Type__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <description>This is used to specify the applicant type</description>
        <label>Applicant Type</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married Couple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two Individuals (Not Married)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than Two Individuals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appraised_Value__c</fullName>
        <description>sprint 4
wipro</description>
        <label>Appraised Value</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approximate_Value__c</fullName>
        <label>Approximate Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Are_you_Self_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you Self-Employed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_Area__c</fullName>
        <label>Assessment Area</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance_on_your_home_equity_line__c</fullName>
        <label>Balance on your home equity line?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Statements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank Statements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Best_Contact_Time__c</fullName>
        <description>This is used to capture the best contact time of the customer.</description>
        <label>Best Contact Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BorrowerHadBankruptcy_How_Many_Years_ago__c</fullName>
        <label>BorrowerHadBankruptcy How Many Years ago</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Borrower_Had_Bankruptcy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Borrower Had Bankruptcy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Borrower_Had_Foreclosure_In_Last_7_Years__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Borrower Had Foreclosure In Last 7 Years</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Borrower_Self_Employed_Since__c</fullName>
        <label>Borrower Self-Employed Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Borrower_Self_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Borrower Self-Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BorrowersHouse__c</fullName>
        <label>Borrowers House#</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrowers_Address_1__c</fullName>
        <description>This is to specify the first line of borrower’s address.</description>
        <inlineHelpText>This is borrower’s mailing address.</inlineHelpText>
        <label>Borrowers Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrowers_Address_2__c</fullName>
        <description>This is to specify the second line of borrower’s address.</description>
        <inlineHelpText>This is borrower’s mailing address.</inlineHelpText>
        <label>Borrowers Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrowers_Apt__c</fullName>
        <label>Borrowers Apt #</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrowers_City__c</fullName>
        <description>This is to specify borrower’s city</description>
        <inlineHelpText>This is borrower’s mailing address.</inlineHelpText>
        <label>Borrowers City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrowers_Country__c</fullName>
        <description>This is to specify borrower’s country.</description>
        <inlineHelpText>This is borrower’s mailing address.</inlineHelpText>
        <label>Borrowers Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrowers_County__c</fullName>
        <description>This is to specify borrower’s county.</description>
        <inlineHelpText>This is borrower’s mailing address.</inlineHelpText>
        <label>Borrowers County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrowers_Current_Residence__c</fullName>
        <description>This is to specify the borrower’s current residence.</description>
        <label>Borrowers Current Residence</label>
        <picklist>
            <picklistValues>
                <fullName>Own</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent Free</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Borrowers_Fax__c</fullName>
        <description>This is to specify borrower’s fax number.</description>
        <label>Borrowers Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Borrowers_Home_Phone__c</fullName>
        <description>This is to specify borrower’s home phone.</description>
        <inlineHelpText>One of Borrowers Home Phone, Borrowers Work Phone, Borrowers Mobile Phone or  Borrowers Email is required to move the lead to a certain status.</inlineHelpText>
        <label>Borrowers Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Borrowers_Mobile_Phone__c</fullName>
        <description>This is to specify borrower’s mobile phone.</description>
        <inlineHelpText>One of Borrowers Home Phone, Borrowers Work Phone, Borrowers Mobile Phone or  Borrowers Email is required to move the lead to a certain status.</inlineHelpText>
        <label>Borrowers Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Borrowers_No_of_Months_at_Residence__c</fullName>
        <description>This is to specify the number of months borrower lived at his current residence.</description>
        <label>Borrowers No of Months at Residence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Borrowers_No_of_Years_at_Residence__c</fullName>
        <description>This is to specify the number of years borrower lived at his current residence.</description>
        <label>Borrowers No of Years at Residence</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Borrowers_State__c</fullName>
        <description>This is to specify borrower’s State.</description>
        <inlineHelpText>This is borrower’s mailing address.</inlineHelpText>
        <label>Borrowers State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrowers_Title__c</fullName>
        <description>This is to specify the company of the borrower.</description>
        <label>Borrowers Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrowers_Work_Phone_Extn__c</fullName>
        <description>This is to specify borrower’s work phone extn.</description>
        <label>Borrowers Work Phone Extn</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Borrowers_Work_Phone__c</fullName>
        <description>This is to specify borrower’s work phone.</description>
        <inlineHelpText>One of Borrowers Home Phone, Borrowers Work Phone, Borrowers Mobile Phone or  Borrowers Email is required to move the lead to a certain status.</inlineHelpText>
        <label>Borrowers Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Borrowers_Years_at_Job__c</fullName>
        <description>This is to specify the number of years borrower worked at his company</description>
        <label>Borrowers Years at Job</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Borrowers_Zip_Postal_Code__c</fullName>
        <description>This is to specify borrower’s zip.</description>
        <inlineHelpText>This is borrower’s mailing address.</inlineHelpText>
        <label>Borrowers Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Details__c</fullName>
        <label>Branch Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_ID__c</fullName>
        <description>Sprint 4
wipro</description>
        <label>Branch ID</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_tax_return_2_years__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business tax return (2 years)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_tax_return__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business tax return</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIF__c</fullName>
        <label>CIF</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRA_Offer_Code__c</fullName>
        <description>Offer Code used in CRA Campaigns</description>
        <label>CRA Offer Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campaign Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Score__c</fullName>
        <description>Sum of all the lead scoring rules from campaign member lead scoring rules</description>
        <inlineHelpText>Sum of all the lead scoring rules from campaign member lead scoring rules</inlineHelpText>
        <label>Campaign Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled_Checks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled Checks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Code__c</fullName>
        <label>Channel Code</label>
        <picklist>
            <controllingField>Channel__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Sources__c</fullName>
        <description>This is to specify the channel sources from which the lead was generated. This pick list is to specify the high-level category. The second pick list needs to be used to further drill down to channel source.</description>
        <label>Channel Sources</label>
        <picklist>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate Table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banner Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct 360</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Inbound Calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Assigned Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Outbound Leads</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Values__c</fullName>
        <description>This is to specify the channel sources from which the lead was generated. This pick list is to specify the low-level category. The values in this pick list will change dynamically based on the value selected in the previous pick list.</description>
        <label>Channel Values</label>
        <picklist>
            <controllingField>Channel_Sources__c</controllingField>
            <picklistValues>
                <fullName>Bankrate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RB Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yahoo/Bing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Campaign Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Campaign Home Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Pull Triggers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross-sell Triggers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payoff Triggers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention Triggers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CapitalOne.com Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CapitalOne.com Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Realtors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Builders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Advisors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention- Current Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm Transfer - RB Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention- Previous Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Loans Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCFR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>This is to specify the channel from which the lead was generated.</description>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Centralized Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributed Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighborhood Lending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClosingDate__c</fullName>
        <label>Closing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closing_Costs__c</fullName>
        <label>Closing Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closing_Date__c</fullName>
        <label>Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closing_Fees__c</fullName>
        <label>Closing Fees</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrower_Full_Name__c</fullName>
        <formula>IF(Co_Borrowers_Last_Name__c != null, Co_Borrowers_First_Name__c + &apos; &apos; +  Co_Borrowers_Last_Name__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Co Borrower Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co- Borrower</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Co- Borrower)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_Borrowers_Address_1__c</fullName>
        <description>This is to specify the first line of co-borrower’s address.</description>
        <label>Co-Borrowers Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrowers_Address_2__c</fullName>
        <description>This is to specify the second line of co-borrower’s address.</description>
        <label>Co-Borrowers Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrowers_Apt__c</fullName>
        <label>Co-Borrowers Apt #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrowers_City__c</fullName>
        <description>This is to specify co-borrower’s city</description>
        <label>Co-Borrowers City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrowers_Country__c</fullName>
        <description>This is to specify co-borrower’s country.</description>
        <label>Co-Borrowers Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrowers_County__c</fullName>
        <description>This is to specify co-borrower’s county</description>
        <label>Co-Borrowers County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrowers_Current_Residence__c</fullName>
        <description>This is to specify the co-borrower’s current residence.</description>
        <label>Co-Borrowers Current Residence</label>
        <picklist>
            <picklistValues>
                <fullName>Own</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent Free</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Co_Borrowers_Email__c</fullName>
        <description>This is to specify co-borrower’s email address.</description>
        <label>Co-Borrowers Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Co_Borrowers_Fax__c</fullName>
        <description>This is to specify co-borrower’s fax number.</description>
        <label>Co-Borrowers Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Co_Borrowers_First_Name__c</fullName>
        <description>This is to specify the co-borrower’s first name.</description>
        <label>Co-Borrowers First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrowers_Home_Phone__c</fullName>
        <description>This is to specify co-borrower’s home phone.</description>
        <label>Co-Borrowers Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Co_Borrowers_House__c</fullName>
        <label>Co-Borrowers House#</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrowers_Last_Name__c</fullName>
        <description>This is to specify the co-borrower’s last name.</description>
        <label>Co-Borrowers Last Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrowers_Mobile_Phone__c</fullName>
        <description>This is to specify co-borrower’s mobile phone.</description>
        <label>Co-Borrowers Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Co_Borrowers_No_of_Months_at_Residence__c</fullName>
        <label>Co-Borrowers No of Months at Residence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_Borrowers_No_of_Years_at_Residence__c</fullName>
        <description>This is to specify the number of years co-borrower lived at his current residence.</description>
        <label>Co-Borrowers No of Years at Residence</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_Borrowers_State__c</fullName>
        <description>This is to specify co-borrower’s State.</description>
        <label>Co-Borrowers State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrowers_Suffix__c</fullName>
        <description>This is to specify the co-borrower’s suffix</description>
        <label>Co-Borrowers Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>Jr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Co_Borrowers_Title__c</fullName>
        <description>This is to specify the co-borrower’s title at his company.</description>
        <label>Co-Borrowers Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Borrowers_Work_Phone_Extn__c</fullName>
        <description>This is to specify co-borrower’s work phone extn.</description>
        <label>Co-Borrowers Work Phone Extn</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Co_Borrowers_Work_Phone__c</fullName>
        <description>This is to specify co-borrower’s work phone.</description>
        <label>Co-Borrowers Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Co_Borrowers_Years_at_Job__c</fullName>
        <description>This is to specify the number of years co-borrower worked at his company.</description>
        <label>Co-Borrowers Years at Job</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>